; ModuleID = '/home/carl/AnghaBench/vlc/compat/extr_lfind.c_lfind.c'
source_filename = "/home/carl/AnghaBench/vlc/compat/extr_lfind.c_lfind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @lfind(i8* %0, i8* %1, i64* %2, i64 %3, i32 (i8*, i8*)* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32 (i8*, i8*)*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i64* %2, i64** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32 (i8*, i8*)* %4, i32 (i8*, i8*)** %11, align 8
  store i32 0, i32* %12, align 4
  br label %14

14:                                               ; preds = %35, %5
  %15 = load i32, i32* %12, align 4
  %16 = sext i32 %15 to i64
  %17 = load i64*, i64** %9, align 8
  %18 = load i64, i64* %17, align 8
  %19 = icmp ult i64 %16, %18
  br i1 %19, label %20, label %38

20:                                               ; preds = %14
  %21 = load i8*, i8** %8, align 8
  %22 = load i32, i32* %12, align 4
  %23 = sext i32 %22 to i64
  %24 = load i64, i64* %10, align 8
  %25 = mul i64 %23, %24
  %26 = getelementptr i8, i8* %21, i64 %25
  store i8* %26, i8** %13, align 8
  %27 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %11, align 8
  %28 = load i8*, i8** %7, align 8
  %29 = load i8*, i8** %13, align 8
  %30 = call i32 %27(i8* %28, i8* %29)
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %34, label %32

32:                                               ; preds = %20
  %33 = load i8*, i8** %13, align 8
  store i8* %33, i8** %6, align 8
  br label %39

34:                                               ; preds = %20
  br label %35

35:                                               ; preds = %34
  %36 = load i32, i32* %12, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %12, align 4
  br label %14

38:                                               ; preds = %14
  store i8* null, i8** %6, align 8
  br label %39

39:                                               ; preds = %38, %32
  %40 = load i8*, i8** %6, align 8
  ret i8* %40
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
